ExportXMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Hide

      mongod --storageEngine=wiredTiger

      run mongo-perf in loop until it crashes using the attached test case.

      while [ 1 ]; do python benchrun.py  --writeCmd true -j true -f testcases/crashwt.js ; if [[ $? -gt 0 ]]; then break; fi; done
      

      Get mongo-perf from https://github.com/mongodb/mongo-perf, put the crashwt.js in the testcases subdirectory.

      Show
      mongod --storageEngine=wiredTiger run mongo-perf in loop until it crashes using the attached test case. while [ 1 ]; do python benchrun.py --writeCmd true -j true -f testcases/crashwt.js ; if [[ $? -gt 0 ]]; then break ; fi; done Get mongo-perf from https://github.com/mongodb/mongo-perf , put the crashwt.js in the testcases subdirectory.
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Server segfaults during the eviction process. This stack trace is with
      db version v3.1.2
      git version: aa0066050f0a9db81aa47181d0fbd18c109ae991

      2015-05-13T13:16:18.010-0400 F -        Got signal: 11 (Segmentation fault).
      
       0xf4dd56 0xf4d142 0xf4d47e 0x7f9c9bf53340 0x13380f1 0x1339433 0x133b283 0x130f1e6 0x130ce4d 0x130ed9e 0x7f9c9bf4b182 0x7f9c9bc7847d
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"400000","o":"B4DD56"},{"b":"400000","o":"B4D142"},{"b":"400000","o":"B4D47E"},{"b":"7F9C9BF43000","o":"10340"},{"b":"400000","o":"F380F1"},{"b":"400000","o":"F39433"},{"b":"400000","o":"F3B283"},{"b":"400000","o":"F0F1E6"},{"b":"400000","o":"F0CE4D"},{"b":"400000","o":"F0ED9E"},{"b":"7F9C9BF43000","o":"8182"},{"b":"7F9C9BB7E000","o":"FA47D"}],"processInfo":{ "mongodbVersion" : "3.1.2", "gitVersion" : "aa0066050f0a9db81aa47181d0fbd18c109ae991", "uname" : { "sysname" : "Linux", "release" : "4.0.0", "version" : "#5 SMP Fri Apr 17 10:38:38 EDT 2015", "machine" : "x86_64" }, "somap" : [ { "elfType" : 2, "b" : "400000" }, { "b" : "7FFE717FB000", "elfType" : 3 }, { "b" : "7F9C9CB85000", "path" : "/lib/x86_64-linux-gnu/librt.so.1", "elfType" : 3 }, { "b" : "7F9C9C981000", "path" : "/lib/x86_64-linux-gnu/libdl.so.2", "elfType" : 3 }, { "b" : "7F9C9C67D000", "path" : "/usr/lib/x86_64-linux-gnu/libstdc++.so.6", "elfType" : 3 }, { "b" : "7F9C9C377000", "path" : "/lib/x86_64-linux-gnu/libm.so.6", "elfType" : 3 }, { "b" : "7F9C9C161000", "path" : "/lib/x86_64-linux-gnu/libgcc_s.so.1", "elfType" : 3 }, { "b" : "7F9C9BF43000", "path" : "/lib/x86_64-linux-gnu/libpthread.so.0", "elfType" : 3 }, { "b" : "7F9C9BB7E000", "path" : "/lib/x86_64-linux-gnu/libc.so.6", "elfType" : 3 }, { "b" : "7F9C9CD8D000", "path" : "/lib64/ld-linux-x86-64.so.2", "elfType" : 3 } ] }}
       mongod-3.1.2(_ZN5mongo15printStackTraceERSo+0x26) [0xf4dd56]
       mongod-3.1.2(+0xB4D142) [0xf4d142]
       mongod-3.1.2(+0xB4D47E) [0xf4d47e]
       libpthread.so.0(+0x10340) [0x7f9c9bf53340]
       mongod-3.1.2(+0xF380F1) [0x13380f1]
       mongod-3.1.2(+0xF39433) [0x1339433]
       mongod-3.1.2(__wt_reconcile+0x1A3) [0x133b283]
       mongod-3.1.2(__wt_evict+0x116) [0x130f1e6]
       mongod-3.1.2(__wt_evict_page+0x2D) [0x130ce4d]
       mongod-3.1.2(+0xF0ED9E) [0x130ed9e]
       libpthread.so.0(+0x8182) [0x7f9c9bf4b182]
       libc.so.6(clone+0x6D) [0x7f9c9bc7847d]
      -----  END BACKTRACE  -----
      

            Assignee:
            Michael Cahill
            Reporter:
            Michael Grundy (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: