Disable eviction in a tree while it is being marked dead.

refs SERVER-18460

Conflicts:
	src/conn/conn_sweep.c